Call gfxUtils::RemoveShaderCacheFromDiskIfNecessary() in gfxPlatform::InitWebRenderConfig()
Categories
(Core :: Graphics: WebRender, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | disabled |
| firefox68 | --- | wontfix |
| firefox69 | --- | fixed |
| firefox70 | --- | fixed |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
gfxUtils::RemoveShaderCacheFromDiskIfNecessary() is called before gfxPlatform::InitWebRenderConfig(). It is not good. By it, obsoleted program binary might be used after Firefox update.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
Comment 2•6 years ago
|
||
I've noticed some "failed to compile shader" log messages on my android devices, and can confirm that this is the cause, and your patch fixes it. Hopefully this will fix bug 1567620 too.
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
Please nominate this for Beta approval when you get a chance. IIUC, we don't need this on ESR68 since WebRender is disabled there.
| Assignee | ||
Comment 7•6 years ago
|
||
Comment on attachment 9079942 [details]
Bug 1568136 - Call gfxUtils::RemoveShaderCacheFromDiskIfNecessary() in gfxPlatform::InitWebRenderConfig()
Beta/Release Uplift Approval Request
- User impact if declined: Obsoleted shader program could continue to exist in a disk cache and could be loaded. It could cause a problem like Bug 1567620 if the program is obsoleted by graphics driver update. But if the program is obsoleted by WR shader change, the program is loaded, but it is not used by WR, since different program uses different digest(file name).
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change reverts to before Bug 1546901 fix.
- String changes made/needed: none
Comment 8•6 years ago
|
||
Comment on attachment 9079942 [details]
Bug 1568136 - Call gfxUtils::RemoveShaderCacheFromDiskIfNecessary() in gfxPlatform::InitWebRenderConfig()
Fixes running a stale shader program in some situations when WebRender is enabled, which can cause badness. Approved for 69.0b8.
Comment 9•6 years ago
|
||
| bugherder uplift | ||
Comment 10•6 years ago
|
||
| uplift | ||
Backed out as https://hg.mozilla.org/releases/mozilla-beta/rev/8e7930ac68068cae158a94f154c46db2bb529bfc and relanded with correct commit information: https://hg.mozilla.org/releases/mozilla-beta/rev/53bb71da50e59d953cdcd68a29c5afabd160abfc
Updated•3 years ago
|
Description
•