Bug 1568136 - Call gfxUtils::RemoveShaderCacheFromDiskIfNecessary() in gfxPlatform::InitWebRenderConfig() r=nical

The RemoveShaderCacheFromDiskIfNecessary() needs to be called after WebRenderConfig initialization.

Differential Revision: https://phabricator.services.mozilla.com/D38978